--- a/gb/24/9/15/n14330942.md
+++ b/gb/24/9/15/n14330942.md
@@ -6,14 +6,14 @@
 <h6>加拿大央行行长麦克莱姆本月初表示，央行可能会采取更大举措，降息幅度超过25个基点。图为麦克莱姆资料照。（Adrian Wyld/加通社）
 </h6>
 <hr>
-<p>【大纪元2024年09月16日讯】（大纪元记者王兰多伦多报导）经济学家预计，加拿大8月份的年通膨率将降至2021年3月以来的最低水准。</p>
-<p>加通社报道，在加拿大统计局定于周二（9月17日）发布消费者物价指数（CPI）之前，路透社调查经济学家得知，预计消费者物价指数（ CPI）将比一年前上涨2.1%，低于7月的2.5%年涨幅，专家们也预期通膨率与上季持平。</p>
-<p>满地可银行（BMO）首席经济学家波特（Doug Porter）表示，“除非潜藏着有什么我们没有意识到的东西，否则我们的物价指数似乎将非常有利。”</p>
-<p>加拿大RBC银行经济学家詹森（Nathan Janzen）和范恩（Claire Fan）在上周的一份报告中表示，这些预期将使总体通膨率仅略高于加拿大央行2%的通膨目标。</p>
-<p>“预计8月经济放缓的主要原因是汽油价格回落，但（加拿大央行）首选的核心CPI指标预计也将呈下降趋势，备受关注的3个月年化增长率，将较7月平均成长2.6%要缓和。”</p>
-<p>在通胀放缓方面取得持续进展之际，央行已表示愿意在情况需要的情况下加快下调关键贷款利率。</p>
-<p>本月早些时候，加拿大央行将主要贷款利率下调了25个百分点，至4.25%，这是连续第三次下调，央行行长麦克莱姆（Tiff Macklem）表示，这项决定的动机是通膨下降，并指出，如果未来的CPI“明显弱于我们的预期……可能会采取更大举措，幅度超过25个基点”。</p>
-<p>另一方面，麦克莱姆也指，如果通膨强于预期，央行可能会放慢降息。</p>
+<p>【大纪元2024年09月16日讯】（大纪元记者王兰多伦多报导）经济学家预计，加拿大8月份的年通胀率将降至2021年3月以来的最低水准。</p>
+<p>据加通社报导，在加拿大统计局定于周二（9月17日）发布消费者物价指数（CPI）之前，路透社调查经济学家得知，预计CPI将比一年前上涨2.1%，低于7月的2.5%年涨幅，专家们也预计通胀率与上季持平。</p>
+<p>满地可银行（BMO）首席经济师波特（Doug Porter）表示：“除非潜藏着有什么我们没有意识到的东西，否则我们的物价指数似乎将非常有利。”</p>
+<p>加拿大RBC银行经济师詹森（Nathan Janzen）和范恩（Claire Fan）在上周的一份报告中表示，这些预期将使总体通胀率仅略高于加拿大央行2%的通胀目标。</p>
+<p>“预计8月经济放缓的主要原因是汽油价格回落，但（加拿大央行）首选的核心CPI指标预计也将呈下降趋势，备受关注的3个月年化增长率，将较7月平均增长2.6%要缓和。”报告称。</p>
+<p>在通胀放缓方面取得持续进展之际，央行已表示愿意在需要的情况下加快下调关键贷款利率。</p>
+<p>本月早些时候，加拿大央行将主要贷款利率下调了25个百分点，至4.25%，这是连续第三次下调，央行行长麦克莱姆（Tiff Macklem）表示，这项决定的动机是通胀下降，并指出，如果未来的CPI“明显弱于我们的预期……可能会采取更大举措，幅度超过25个基点”。</p>
+<p>另一方面，麦克莱姆也指，如果通胀强于预期，央行可能会放慢降息。</p>
 <p>自1月以来，通胀率一直维持在3%以下，随着经济疲软，对物价上涨重新加速的担忧也有所减弱。</p>
 <p>波特表示，尽管通胀率取得了进展，但“还没有达到令人信服的理由表明央行必须加快步伐”。</p>
 <p>他预测，央行将在每次会议上将主要贷款利率下调25个百分点，直到2025年7月，届时利率将降至2.5%。这项预测也是在上周发布的数据显示加拿大失业率从7月的6.4%升至8月的6.6%后做出的。</p>
@@ -28,40 +28,39 @@
 <p>他们强调：“劳动力市场逐渐但持续的疲软和通胀放缓清楚地表明，不再需要当前的高利率。”</p>
 <p>责任编辑：严枫</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330932.md#1">加拿大保守党领袖：警惕中共再度干预选举</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330937.md#1">新车没有备胎 加拿大司机如何应对爆胎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330936.md#1">卑诗证监会：华女诈骗投资者170万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/12/n14329472.md#1">加航面临罢工危机 商界敦促政府干预</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/12/n14329393.md#1">工会呼吁联邦员工抵制渥太华市中心商家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/12/n14329389.md#1">与富裕国家差距拉大 加拿大经济表现大不如前</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14327224.md#1">加拿大学生预计要支付7.5万元才能获大学学位</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327858.md#1">全球大学及学科排名 多伦多大学医学专业第二</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/12/n14329366.md#1">加国会外国干预大选调查 第二阶段下周启动</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/16/n10149315.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（三）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/20/n10578907.md#1" target="_blank">【细语人生】见证大法的神奇（13）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/23/n9759878.md#1" target="_blank">钟革：朱毛红军使国人成人血馒头（七）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327533.md#1">时隔百年再开棺 16世纪圣女遗体仍保存完好</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14326615.md#1">【未解之谜】奇人王恩庆  一言断生死却逃不过“命运”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327406.md#1">台故宫推古代道里交通图籍展 一窥古地图世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327659.md#1">中秋节：月亮 嫦娥和月饼交织天上人间的情缘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14326640.md#1">生命本是天上仙</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330873.md#1">【马克时空】SpaceX首次商业太空行走 亮点多</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14330094.md#1">【菁英论坛】美众院通过28项法案 全面反击中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14330100.md#1">【新闻欣视角】中国高管掀辞职潮 想外逃不容易</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/12/n14328904.md#1">中共人大审议“延迟退休”专家揭内幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/12/n14329486.md#1">王友群：赖清德一语令中共四大丑闻曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14329557.md#1">【翻墙必看】谁干的？无人机骚扰天津滨海机场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14330097.md#1">再续《琅琊榜》情缘 刘涛与胡歌相约过中秋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/14/n14330525.md#1">吴谨言闪电结婚引热议 于正爆她名下财产状况</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/12/n14329392.md#1">泰勒丝表态挺贺锦丽 川普竞选副手万斯回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14330053.md#1">横店“龙套王”曾建去世?拍戏多年仍一贫如洗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14330086.md#1">陈浩民直播榨果汁 苍蝇满天飞 卫生状况堪忧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270131.md#1">五类食物暗藏大危害 美国人常吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/12/n14328975.md#1">房客最奇特的失物是啥？ 全球400多家旅馆揭密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14329639.md#1">专家：用这招清理汽车挡风玻璃会使其受损</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325202.md#1">抗癌 抗衰老 降三高 薏仁这样吃最有效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14326844.md#1">便秘怎么办？击退各种便秘 中医提供相应解药</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544926.md#1">【纪元焦点】南航机长用生命反抗职场霸凌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543479.md#1">砸钱也没用 中共这些技术被“卡脖子”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543820.md#1">广东制造业陷寒冬 老牌厂知名外企宣告结业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543930.md#1">人民日报刊文纪念李克强冥诞 求是网删文</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543281.md#1">刘晓庆珠宝公司因民间借贷纠纷被执行44.9万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543287.md#1">综艺《出去一下》将开播 舒华、桂纶镁同台亮相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539895.md#1">强化免疫有三关 中医从脏腑打造防御屏障</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/9/15/n14330942.htm">经济学家预计：8月通胀放缓至2.1%</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330942.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
