--- a/gb/24/9/17/n14333057.md
+++ b/gb/24/9/17/n14333057.md
@@ -8,7 +8,7 @@
 <hr>
 <p>【大纪元2024年09月18日讯】（大纪元记者周行多伦多报导）加拿大8月份的年度通胀率降至央行2%的控制目标，为2021年2月以来的最低水平，这也提高了央行在10月加速降息的可能性。</p>
 <p>加拿大统计局周二发布的报告显示，8月的消费者价格指数（CPI）同比上涨2.0%，低于7月的2.5%。</p>
-<p>统计局指出，8月份通胀放缓部分归因于汽油价格下跌，这与价格下滑及基年效应共同作用的结果。如果不计算汽油，8月CPI同比上涨2.2%。房贷利息成本和租金则是推动CPI上涨的主要因素。</p>
+<p>统计局指出，8月份通胀放缓部分归因于汽油价格下跌，这是价格下滑及基年效应共同作用的结果。如果不计算汽油，8月CPI同比上涨2.2%。房贷利息成本和租金则是推动CPI上涨的主要因素。</p>
 <p>与7月环比上涨0.4%相比，8月CPI环比下降0.2%。导致月度下跌的主要原因是航空运输、汽油、服装、鞋类及旅游价格的下滑。</p>
 <p>这一结果接近行业预测。路透社调查的分析师预计8月CPI同比涨幅将从7月的2.5%降至2.1%，环比保持基本不变。</p>
 <h2>汽油价格同比下跌5.1%</h2>
@@ -20,54 +20,51 @@
 <p>8月服装和鞋类价格环比下降0.6%。统计局表示，自1971年以来，8月服装价格从未出现过下降，因为通常这个月与返校购物需求有关。然而，今年8月，需求疲软导致零售商提供更多折扣以吸引消费者。</p>
 <p>服装和鞋类价格同比已连续8个月下跌，8月同比下降4.4%，跌幅高于7月的2.7%。</p>
 <h2>央行降息预期增强</h2>
-<p>加拿大央行行长蒂芙·麦克莱姆（Tiff Macklem）在9月初的货币政策决定中曾警告，由于经济增长疲软，央行可能需要采取措施，防范通胀率跌破控制</p>
-<p>目标。</p>
+<p>加拿大央行行长蒂夫·麦克莱姆（Tiff Macklem）在9月初的货币政策决定中曾警告，由于经济增长疲软，央行可能需要采取措施，防范通胀率跌破控制目标。</p>
 <p>央行已连续三次下调基准利率，总计下降了0.75个百分点，目前基准利率为4.25%。根据央行的预测，2023年通胀率预计为2.6%，2024年降至2.4%，并将在2026年达到央行控制目标的中点（2%）。</p>
 <p>目前，货币市场预测央行将在今年剩余的两次会议中分别降息0.25个百分点。然而，新的通胀数据使市场对10月份降息0.5个百分点的预期上升至47.5%。</p>
 <h2>专家预测降息速度加快</h2>
-<p>CIBC银行高级经济师安德鲁·格兰瑟姆（Andrew Grantham）表示，“通胀已经不再构成威胁，加拿大央行现在应集中精力刺激经济，防止失业率上升。”</p>
+<p>CIBC银行高级经济师安德鲁·格兰瑟姆（Andrew Grantham）表示：“通胀已经不再构成威胁，加拿大央行现在应集中精力刺激经济，防止失业率上升。”</p>
 <p>CIBC在9月12日的经济预测报告中预计，到2024年1月，央行的政策利率将降至3%。</p>
-<p>道明银行高级经济师詹姆斯·奥兰多（James Orlando）指出，目前的核心通胀指标持续走低，除去住房成本，通胀率将更低。这表明高利率继续对经济施加压力，减缓经济增长。根据他的估算，现行利率水平仍高于应有水平近2个百分点。</p>
+<p>道明银行高级经济师詹姆斯·奥兰多（James Orlando）指出，目前的核心通胀指标持续走低，除去住房成本，通胀率将更低。这表明高利率继续对经济施加压力，减缓经济增长。根据他的估算，现行利率水平仍高于应有水平近两个百分点。</p>
 <p>满地可银行的策略师本杰明·赖茨（Benjamin Reitzes）也表示，通胀率回到2%的目标，增强了市场对央行加速降息的预期。市场目前关心的是，央行在10月将降息0.25还是0.5个百分点。</p>
 <p>赖茨还指出，下周将公布的国内生产总值（GDP）数据及下次会议前的另一份通胀报告，将成为央行重要的决策参考依据。如果数据再度疲软，市场对降息0.5个百分点的呼声将进一步高涨。</p>
 <p>&nbsp;</p>
 <p>责任编辑：岳怡</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270439.md#1">【渥京6·14】新垃圾总体规划 促延长填埋场寿命</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297871.md#1">加拿大央行降息至4.5% 预计可能还会再降</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298942.md#1">卑诗6月房屋销量低于历史平均水平24%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302456.md#1">多伦多投资公寓 近80%负现金流</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14323523.md#1">加国央行周三料第三次降息 美联储也将追随</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14331005.md#1">阻挠学者访台 中共施压渥太华大学及政府</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14333023.md#1">加国通胀放缓 有些食品价格仍大幅上涨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14333020.md#1">审计报告：环境部对绿色补贴管理不当</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14333019.md#1">加拿大批准使用莫德纳更新版COVID疫苗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14332981.md#1">报告：20%加拿大人称受到帮派暴力影响</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/1/n10606663.md#1" target="_blank">大兴文革：踩撕婴儿 活埋祖孙 一夜杀百人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/5/n11501516.md#1" target="_blank">欧洲千人法会 西方法轮功学员谈修炼感悟</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/10/n10965703.md#1" target="_blank">共产暴政录：广西文革大屠杀事件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/31/n11292679.md#1" target="_blank">美国国务院将对迫害法轮功者 严格审核签证</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14330096.md#1">【未解之谜】与高白外星人共事两年（上）：神秘传说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327659.md#1">中秋节：月亮 嫦娥和月饼交织天上人间的情缘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14326640.md#1">生命本是天上仙</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325852.md#1">古人择佳偶的智慧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/11/n14328142.md#1">【古道人生】兄屡试不第遭逐 弟一战而捷受贺 人生结局却相反！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14332006.md#1">【未解之谜】与高白外星人共事两年（下）：秘密合作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/14/n14330399.md#1">【中国禁闻】香山论坛聚焦美中关系 中共玩两手策略</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14332010.md#1">【新闻欣视角】川普哈里斯唱中国歌？AI陷阱！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/14/n14330541.md#1">华为三折叠屏手机是自主研发？供应链被起底</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330635.md#1">金价疯涨 大陆一些金店却“撑不住了”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/14/n14330387.md#1">沈舟：中共若攻台 美军海豹部队能干什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/14/n14330525.md#1">吴谨言闪电结婚引热议 于正爆她名下财产状况</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330971.md#1">港星徐少强病故 妻料理后事时突发心脏病猝逝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14332175.md#1">拍《热辣滚烫》曾减肥50公斤 贾玲复胖引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/14/n14330432.md#1">母亲被困电梯50分钟 大陆女星李纯痛批物业公司</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330776.md#1">73岁武侠影星徐少强因食道癌病逝 田启文证实</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14327141.md#1">姜黄素保护肾脏 但八种人不适合吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14331412.md#1">牙医：早餐中常见的这些食物伤牙 要小心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330730.md#1">如何抵制对特定食物的渴望？ 专家教你5招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/1/n14321776.md#1">研究：间歇性禁食背后的诸多健康益处</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14327027.md#1">中秋吃月饼、烤肉无负担 中医授三招减脂攻略</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544926.md#1">【纪元焦点】南航机长用生命反抗职场霸凌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543479.md#1">砸钱也没用 中共这些技术被“卡脖子”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543820.md#1">广东制造业陷寒冬 老牌厂知名外企宣告结业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543930.md#1">人民日报刊文纪念李克强冥诞 求是网删文</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543281.md#1">刘晓庆珠宝公司因民间借贷纠纷被执行44.9万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543287.md#1">综艺《出去一下》将开播 舒华、桂纶镁同台亮相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539895.md#1">强化免疫有三关 中医从脏腑打造防御屏障</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/9/17/n14333057.htm">8月通胀率达标 加拿大央行降息预期升温</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/9/17/n14333057.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
